feat: Add Connection Profile support for Guided Generations
- Introduced `runWithConnectionProfile` function to execute instructions using a selected connection profile.
- Updated settings UI to include a dropdown for selecting connection profiles and a checkbox to enable/disable their use.
- Modified guided impersonation and response scripts to utilize the connection profile when enabled.
- Enhanced error handling and logging for connection profile requests.
- Ensured compatibility with existing functionality while integrating new features.

--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,26 @@
         </div>
         <div class="inline-drawer-content">
             <div class="settings_section">
+                <h4>Connection Profile</h4>
+                <div class="setting_item">
+                    <div>
+                        <label>Select a Connection Profile</label>
+                    </div>
+                    <select
+                        class="text_pole connection_profile"
+                        title="Select a Connection Profile"
+                        data-i18n="[title]Select a Connection Profile"
+                    ></select>
+                </div>
+                <div class="setting_item">
+                    <div style="display: flex; align-items: center; margin-bottom: 5px;">
+                        <input type="checkbox" id="gg_useConnectionProfile" name="useConnectionProfile" class="gg-setting-input">
+                        <label for="gg_useConnectionProfile" style="margin-left: 8px;">Use connection profile for Guided Generations (where applicable)</label>
+                    </div>
+                </div>
+            </div>
+
+            <div class="settings_section">
                 <h4>Show Action Buttons</h4> <!-- Heading for Impersonate/Action Buttons -->
                 <div class="setting_item">
                     <div style="display: flex; align-items: center; margin-bottom: 5px;">
