--- a/settings.html
+++ b/settings.html
@@ -7,25 +7,8 @@
         </div>
         <div class="inline-drawer-content">
             <div class="settings_section">
-                <h4>Connection Profile</h4>
-                <div class="setting_item">
-                    <div>
-                        <label>Select a Connection Profile</label>
-                    </div>
-                    <select
-                        class="text_pole connection_profile"
-                        title="Select a Connection Profile"
-                        data-i18n="[title]Select a Connection Profile"
-                    ></select>
-                </div>
-                <div class="setting_item">
-                    <div style="display: flex; align-items: center; margin-bottom: 5px;">
-                        <input type="checkbox" id="gg_useConnectionProfile" name="useConnectionProfile" class="gg-setting-input">
-                        <label for="gg_useConnectionProfile" style="margin-left: 8px;">Use connection profile for Guided Generations (where applicable)</label>
-                    </div>
-                </div>      
-                
-                <h4>Show Action Buttons</h4> <!-- Heading for Impersonate/Action Buttons -->
+
+                <h4>Show Action Buttonsds</h4> <!-- Heading for Impersonate/Action Buttons -->
                 <div class="setting_item">
                     <div style="display: flex; align-items: center; margin-bottom: 5px;">
                         <input type="checkbox" id="gg_showImpersonate1stPerson" name="showImpersonate1stPerson" class="gg-setting-input">
@@ -62,6 +45,24 @@
                         <label for="gg_showGuidedSwipe" style="margin-left: 8px;">Show Guided Swipe</label>
                     </div>
                 </div>
+                <hr>
+                <h4>Connection Profile</h4>
+                <div class="setting_item">
+                    <div>
+                        <label>Select a Connection Profile</label>
+                    </div>
+                    <select
+                        class="text_pole connection_profile"
+                        title="Select a Connection Profile"
+                        data-i18n="[title]Select a Connection Profile"
+                    ></select>
+                </div>
+                <div class="setting_item">
+                    <div style="display: flex; align-items: center; margin-bottom: 5px;">
+                        <input type="checkbox" id="gg_useConnectionProfile" name="useConnectionProfile" class="gg-setting-input">
+                        <label for="gg_useConnectionProfile" style="margin-left: 8px;">Use connection profile for Guided Generations (where applicable)</label>
+                    </div>
+                </div>      
                 <hr>
                 <h4>Show Tool Buttons</h4>
                 <div class="setting_item">
