--- a/settings.html
+++ b/settings.html
@@ -146,6 +146,25 @@
                     </small>
                 </div>
                 <hr>
+                <h4>Connection Profile</h4>
+                <div class="setting_item">
+                    <div>
+                        <label>Select a Connection Profile</label>
+                    </div>
+                    <select
+                        class="text_pole connection_profile"
+                        title="Select a Connection Profile"
+                        data-i18n="[title]Select a Connection Profile"
+                    ></select>
+                </div>
+                <div class="setting_item">
+                    <div style="display: flex; align-items: center; margin-bottom: 5px;">
+                        <input type="checkbox" id="gg_useConnectionProfile" name="useConnectionProfile" class="gg-setting-input">
+                        <label for="gg_useConnectionProfile" style="margin-left: 8px;">Use connection profile for Guided Generations</label>
+                        <small class="setting_item_description">This will use the connection profile for the Guided Generations actions. This is useful if you want to use a different connection profile for Guided Generations than the one you use for the rest of your scripts/RP</small>
+                    </div>
+                </div>
+                <hr>
                 <h4>Preset Usage</h4>
                 <small class="setting_item_description">Assign specific System Prompts (Presets) to different Guided Generation actions. When a preset is selected, it will be temporarily activated just before the guide runs, then deactivated. Use the 'GGSystemPrompt' button to quickly fill the field with the default guidance preset.</small>
                 <!-- Preset fields for each guide/tool -->
